--- a/app/globals.css
+++ b/app/globals.css
@@ -3,41 +3,20 @@
 @import "tailwindcss";
 
 :root {
+  --background:#C4FFF9
+  --foreground:#001219
   /* COLOR PALETTE */
   --black: #0f1108;
-  --off-white: #f7f4f3;
-  --coffee: #2C1810;
-  --teal: #5B9279;
-  --gold: #D4A84B;
 
-  /* DEFINING LIGHT MODE COLOR PALETTES  */
-  --background: var(--off-white);
-  --foreground: var(--black);
-  --primary: var(--teal);
-  --secondary: var(--gold);
-  --accent: var(--coffee);
 }
 /* Dark Mode */
 .dark{
-  --background: var(--black);
-  --foreground: var(--off-white);
+  --background: #001219
+  --foreground: #edf2f4
 }
 
 @theme inline{
-  /* Tailwind classes */
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --color-primary: var(--primary);
-  --color-secondary: var(--gold);
-  --color-border: var(--border-color);
-  --color-accent: var(--accent);
-  --color-cofee: var(--coffee) ;
-  --color-black: var(--black);
 
-  /* Fonts */
-  --font-sans: var(--font-cooper-hewitt);
-  --font-mono: var(--font-geist-mono);
-  
 }
 
 @font-face {
@@ -50,17 +29,8 @@
     font-family: 'Electrolize', sans-serif;
   }
 
-
-body {
-  background: var(--background);
-  padding: 0 260px;
-  color: var(--foreground);
-  font-family: var(--font-cooper-hewitt), sans-serif;
-  scroll-behavior: smooth;
-}
-
-@media (max-width: 768px){
-  body{
-    padding: 0 20px;
+  .font-inter {
+    font-family: 'Inter', sans-serif;
   }
-}
+
+
