--- a/app/globals.css
+++ b/app/globals.css
@@ -32,5 +32,17 @@
   .font-inter {
     font-family: 'Inter', sans-serif;
   }
+@theme{
+  --animate-marquee: marquee 20s linear infinite;
+
+  @keyframes marquee {
+    from {
+      transform: translateX(0%);
+    }
+    to {
+      transform: translateX(-50%);
+    }
+  }
+}
 
 
