--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #C4FFF9;
+  --background: #c4fff9;
   --foreground: #001219;
   /* COLOR PALETTE */
   --black: #0f1108;
@@ -13,8 +13,7 @@
   --foreground: #edf2f4;
 }
 
-@theme inline{
-
+@theme inline {
 }
 
 .font-electrolize {
@@ -33,7 +32,7 @@
   box-shadow: 2px 4px 0px 0px black !important;
 }
 
-@theme{
+@theme {
   --animate-marquee: marquee 20s linear infinite !important;
   --animate-fade-in-up: fade-in-up 0.4s ease-out both !important;
   --animate-soundwave: soundwave 1s ease-in-out infinite !important;
@@ -60,7 +59,8 @@
   }
 
   @keyframes soundwave {
-    0%, 100% {
+    0%,
+    100% {
       height: 40%;
     }
     50% {
@@ -105,5 +105,3 @@
   transform-origin: bottom right;
   animation: hammer-swing 0.5s ease-in-out infinite;
 }
-
-
