--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,8 @@
   --foreground: #edf2f4;
 }
 
-@theme inline {}
+@theme inline {
+}
 
 .font-electrolize {
   font-family: var(--font-electrolize), 'Electrolize', sans-serif;
@@ -64,7 +65,6 @@
   }
 
   @keyframes soundwave {
-
     0%,
     100% {
       height: 40%;
